Fixed the misalignment for top search bar's button

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -80,6 +80,10 @@ body, fieldset legend {
 			}
 		}
 
+		.search-button {
+			padding-right: 15px;
+		}
+
 		.join-button {
 			background-color: green;
 
